--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script:
     - cargo test --all
     - |
         if [[ "$TRAVIS_RUST_VERSION" == "nightly" ]]; then
-        RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install --force cargo-tarpaulin
+        RUSTFLAGS="--cfg procmacro2_semver_exempt" cargo install cargo-tarpaulin
         RUST_BACKTRACE=1 cargo tarpaulin --out Xml
         bash <(curl -s https://codecov.io/bash)
         echo "Uploaded code coverage"
